--- a/site/frontend/package.json
+++ b/site/frontend/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.2",
     "better-react-mathjax": "^2.0.3",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
